// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GET /api/answers/:id should display the second page of results if page query is 2 1`] = `
Array [
  Object {
    "__v": 0,
    "_id": "5a2ff186fc13ae7095000621",
    "author": Object {
      "_id": "5a2ff186fc13ae7095000636",
      "avatar": "test-avatar-3.jpg",
      "name": "Killie Povey",
    },
    "body": "Mauris enim leo, rhoncus sed, vestibulum sit amet, cursus id, turpis. Integer aliquet, massa id promise.",
    "question_id": "5a2ff186fc13ae7095000649",
    "submitted_at": "2017-12-20T22:07:44.899Z",
    "updated_at": "2017-12-20T22:07:44.899Z",
    "votes": 0,
  },
  Object {
    "__v": 0,
    "_id": "5a2ff186fc13ae70950006a9",
    "author": Object {
      "_id": "5a2ff186fc13ae7095000638",
      "avatar": "test-avatar-2.jpg",
      "name": "Yoshi Gilchrist",
    },
    "body": "Praesent lectus. Vestibulum quam sapien, varius ut, blandit non, interdum in, ante.",
    "question_id": "5a2ff186fc13ae7095000649",
    "submitted_at": "2017-12-20T22:07:44.898Z",
    "updated_at": "2017-12-20T22:07:44.898Z",
    "votes": 43,
  },
]
`;

exports[`GET /api/answers/:id should return an error if page has no items 1`] = `
Object {
  "err": "Page doesn't exist",
}
`;

exports[`GET /api/answers/:id should return an error if sort value is not valid 1`] = `
Object {
  "err": "'2' is not a valid value for 'sort'",
}
`;

exports[`GET /api/answers/:id should return an error if sort_by value is not valid 1`] = `
Object {
  "err": "'invalidSort' is not a valid value for 'sort_by'",
}
`;

exports[`GET /api/answers/:id should sort answers by date 1`] = `
Array [
  Object {
    "__v": 0,
    "_id": "5a2ff186fc13ae7095000618",
    "author": Object {
      "_id": "5a2ff186fc13ae7095000636",
      "avatar": "test-avatar-3.jpg",
      "name": "Killie Povey",
    },
    "body": "Vestibulum ante ipsum primis in faucibus",
    "question_id": "5a2ff186fc13ae7095000649",
    "submitted_at": "2017-12-20T22:55:44.898Z",
    "updated_at": "2017-12-20T22:55:44.898Z",
    "votes": 0,
  },
  Object {
    "__v": 0,
    "_id": "5a2ff186fc13ae70950006a1",
    "author": Object {
      "_id": "5a2ff186fc13ae7095000636",
      "avatar": "test-avatar-3.jpg",
      "name": "Killie Povey",
    },
    "body": "Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Duis faucibus",
    "question_id": "5a2ff186fc13ae7095000649",
    "submitted_at": "2017-12-20T22:09:44.898Z",
    "updated_at": "2017-12-20T22:09:44.898Z",
    "votes": 10,
  },
  Object {
    "__v": 0,
    "_id": "5a2ff186fc13ae7095000621",
    "author": Object {
      "_id": "5a2ff186fc13ae7095000636",
      "avatar": "test-avatar-3.jpg",
      "name": "Killie Povey",
    },
    "body": "Mauris enim leo, rhoncus sed, vestibulum sit amet, cursus id, turpis. Integer aliquet, massa id promise.",
    "question_id": "5a2ff186fc13ae7095000649",
    "submitted_at": "2017-12-20T22:07:44.899Z",
    "updated_at": "2017-12-20T22:07:44.899Z",
    "votes": 0,
  },
  Object {
    "__v": 0,
    "_id": "5a2ff186fc13ae70950006a9",
    "author": Object {
      "_id": "5a2ff186fc13ae7095000638",
      "avatar": "test-avatar-2.jpg",
      "name": "Yoshi Gilchrist",
    },
    "body": "Praesent lectus. Vestibulum quam sapien, varius ut, blandit non, interdum in, ante.",
    "question_id": "5a2ff186fc13ae7095000649",
    "submitted_at": "2017-12-20T22:07:44.898Z",
    "updated_at": "2017-12-20T22:07:44.898Z",
    "votes": 43,
  },
  Object {
    "__v": 0,
    "_id": "5a2ff186fc13ae70950006a4",
    "author": Object {
      "_id": "5a2ff186fc13ae7095000636",
      "avatar": "test-avatar-3.jpg",
      "name": "Killie Povey",
    },
    "body": "Morbi odio odio, elementum eu, interdum eu, tincidunt in, leo.",
    "question_id": "5a2ff186fc13ae7095000649",
    "submitted_at": "2017-12-20T22:07:16.898Z",
    "updated_at": "2017-12-20T22:07:16.898Z",
    "votes": 1,
  },
  Object {
    "__v": 0,
    "_id": "5a2ff186fc13ae70950006a3",
    "author": Object {
      "_id": "5a2ff186fc13ae7095000636",
      "avatar": "test-avatar-3.jpg",
      "name": "Killie Povey",
    },
    "body": "Pellentesque ultrices mattis odio. Donec vitae nisi.",
    "question_id": "5a2ff186fc13ae7095000649",
    "submitted_at": "2017-12-20T22:07:01.898Z",
    "updated_at": "2017-12-20T22:07:01.898Z",
    "votes": 103,
  },
  Object {
    "__v": 0,
    "_id": "5a2ff186fc13ae70950006a0",
    "author": Object {
      "_id": "5a2ff186fc13ae7095000636",
      "avatar": "test-avatar-3.jpg",
      "name": "Killie Povey",
    },
    "body": "Aliquam sit amet diam in magna bibendum imperdiet.",
    "question_id": "5a2ff186fc13ae7095000649",
    "submitted_at": "2017-12-20T22:05:44.898Z",
    "updated_at": "2017-12-20T22:05:44.898Z",
    "votes": 1,
  },
  Object {
    "__v": 0,
    "_id": "5a2ff186fc13ae70950006a2",
    "author": Object {
      "_id": "5a2ff186fc13ae7095000636",
      "avatar": "test-avatar-3.jpg",
      "name": "Killie Povey",
    },
    "body": "Nullam varius. Nulla facilisi.",
    "question_id": "5a2ff186fc13ae7095000649",
    "submitted_at": "2017-12-20T22:03:41.898Z",
    "updated_at": "2017-12-20T22:03:41.898Z",
    "votes": 26,
  },
  Object {
    "__v": 0,
    "_id": "5a2ff186fc13ae7095000619",
    "author": Object {
      "_id": "5a2ff186fc13ae7095000636",
      "avatar": "test-avatar-3.jpg",
      "name": "Killie Povey",
    },
    "body": "Nam congue, risus semper porta volutpat, quam pede lobortis",
    "question_id": "5a2ff186fc13ae7095000649",
    "submitted_at": "2017-12-20T22:01:07.898Z",
    "updated_at": "2017-12-20T22:01:07.898Z",
    "votes": 9,
  },
  Object {
    "__v": 0,
    "_id": "5a2ff186fc13ae7095000620",
    "author": Object {
      "_id": "5a2ff186fc13ae7095000636",
      "avatar": "test-avatar-3.jpg",
      "name": "Killie Povey",
    },
    "body": "Pellentesque at nulla. Suspendisse potenti. Cras in purus eu magna",
    "question_id": "5a2ff186fc13ae7095000649",
    "submitted_at": "2017-12-19T23:04:24.894Z",
    "updated_at": "2017-12-19T23:04:24.894Z",
    "votes": 44,
  },
]
`;

exports[`GET /api/answers/:id should sort answers by date in ascending order 1`] = `
Array [
  Object {
    "__v": 0,
    "_id": "5a2ff186fc13ae7095000620",
    "author": Object {
      "_id": "5a2ff186fc13ae7095000636",
      "avatar": "test-avatar-3.jpg",
      "name": "Killie Povey",
    },
    "body": "Pellentesque at nulla. Suspendisse potenti. Cras in purus eu magna",
    "question_id": "5a2ff186fc13ae7095000649",
    "submitted_at": "2017-12-19T23:04:24.894Z",
    "updated_at": "2017-12-19T23:04:24.894Z",
    "votes": 44,
  },
  Object {
    "__v": 0,
    "_id": "5a2ff186fc13ae7095000619",
    "author": Object {
      "_id": "5a2ff186fc13ae7095000636",
      "avatar": "test-avatar-3.jpg",
      "name": "Killie Povey",
    },
    "body": "Nam congue, risus semper porta volutpat, quam pede lobortis",
    "question_id": "5a2ff186fc13ae7095000649",
    "submitted_at": "2017-12-20T22:01:07.898Z",
    "updated_at": "2017-12-20T22:01:07.898Z",
    "votes": 9,
  },
  Object {
    "__v": 0,
    "_id": "5a2ff186fc13ae70950006a2",
    "author": Object {
      "_id": "5a2ff186fc13ae7095000636",
      "avatar": "test-avatar-3.jpg",
      "name": "Killie Povey",
    },
    "body": "Nullam varius. Nulla facilisi.",
    "question_id": "5a2ff186fc13ae7095000649",
    "submitted_at": "2017-12-20T22:03:41.898Z",
    "updated_at": "2017-12-20T22:03:41.898Z",
    "votes": 26,
  },
  Object {
    "__v": 0,
    "_id": "5a2ff186fc13ae70950006a0",
    "author": Object {
      "_id": "5a2ff186fc13ae7095000636",
      "avatar": "test-avatar-3.jpg",
      "name": "Killie Povey",
    },
    "body": "Aliquam sit amet diam in magna bibendum imperdiet.",
    "question_id": "5a2ff186fc13ae7095000649",
    "submitted_at": "2017-12-20T22:05:44.898Z",
    "updated_at": "2017-12-20T22:05:44.898Z",
    "votes": 1,
  },
  Object {
    "__v": 0,
    "_id": "5a2ff186fc13ae70950006a3",
    "author": Object {
      "_id": "5a2ff186fc13ae7095000636",
      "avatar": "test-avatar-3.jpg",
      "name": "Killie Povey",
    },
    "body": "Pellentesque ultrices mattis odio. Donec vitae nisi.",
    "question_id": "5a2ff186fc13ae7095000649",
    "submitted_at": "2017-12-20T22:07:01.898Z",
    "updated_at": "2017-12-20T22:07:01.898Z",
    "votes": 103,
  },
  Object {
    "__v": 0,
    "_id": "5a2ff186fc13ae70950006a4",
    "author": Object {
      "_id": "5a2ff186fc13ae7095000636",
      "avatar": "test-avatar-3.jpg",
      "name": "Killie Povey",
    },
    "body": "Morbi odio odio, elementum eu, interdum eu, tincidunt in, leo.",
    "question_id": "5a2ff186fc13ae7095000649",
    "submitted_at": "2017-12-20T22:07:16.898Z",
    "updated_at": "2017-12-20T22:07:16.898Z",
    "votes": 1,
  },
  Object {
    "__v": 0,
    "_id": "5a2ff186fc13ae70950006a9",
    "author": Object {
      "_id": "5a2ff186fc13ae7095000638",
      "avatar": "test-avatar-2.jpg",
      "name": "Yoshi Gilchrist",
    },
    "body": "Praesent lectus. Vestibulum quam sapien, varius ut, blandit non, interdum in, ante.",
    "question_id": "5a2ff186fc13ae7095000649",
    "submitted_at": "2017-12-20T22:07:44.898Z",
    "updated_at": "2017-12-20T22:07:44.898Z",
    "votes": 43,
  },
  Object {
    "__v": 0,
    "_id": "5a2ff186fc13ae7095000621",
    "author": Object {
      "_id": "5a2ff186fc13ae7095000636",
      "avatar": "test-avatar-3.jpg",
      "name": "Killie Povey",
    },
    "body": "Mauris enim leo, rhoncus sed, vestibulum sit amet, cursus id, turpis. Integer aliquet, massa id promise.",
    "question_id": "5a2ff186fc13ae7095000649",
    "submitted_at": "2017-12-20T22:07:44.899Z",
    "updated_at": "2017-12-20T22:07:44.899Z",
    "votes": 0,
  },
  Object {
    "__v": 0,
    "_id": "5a2ff186fc13ae70950006a1",
    "author": Object {
      "_id": "5a2ff186fc13ae7095000636",
      "avatar": "test-avatar-3.jpg",
      "name": "Killie Povey",
    },
    "body": "Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Duis faucibus",
    "question_id": "5a2ff186fc13ae7095000649",
    "submitted_at": "2017-12-20T22:09:44.898Z",
    "updated_at": "2017-12-20T22:09:44.898Z",
    "votes": 10,
  },
  Object {
    "__v": 0,
    "_id": "5a2ff186fc13ae7095000618",
    "author": Object {
      "_id": "5a2ff186fc13ae7095000636",
      "avatar": "test-avatar-3.jpg",
      "name": "Killie Povey",
    },
    "body": "Vestibulum ante ipsum primis in faucibus",
    "question_id": "5a2ff186fc13ae7095000649",
    "submitted_at": "2017-12-20T22:55:44.898Z",
    "updated_at": "2017-12-20T22:55:44.898Z",
    "votes": 0,
  },
]
`;

exports[`GET /api/answers/:id should sort answers by date in descending order by default 1`] = `
Array [
  Object {
    "__v": 0,
    "_id": "5a2ff186fc13ae7095000618",
    "author": Object {
      "_id": "5a2ff186fc13ae7095000636",
      "avatar": "test-avatar-3.jpg",
      "name": "Killie Povey",
    },
    "body": "Vestibulum ante ipsum primis in faucibus",
    "question_id": "5a2ff186fc13ae7095000649",
    "submitted_at": "2017-12-20T22:55:44.898Z",
    "updated_at": "2017-12-20T22:55:44.898Z",
    "votes": 0,
  },
  Object {
    "__v": 0,
    "_id": "5a2ff186fc13ae70950006a1",
    "author": Object {
      "_id": "5a2ff186fc13ae7095000636",
      "avatar": "test-avatar-3.jpg",
      "name": "Killie Povey",
    },
    "body": "Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Duis faucibus",
    "question_id": "5a2ff186fc13ae7095000649",
    "submitted_at": "2017-12-20T22:09:44.898Z",
    "updated_at": "2017-12-20T22:09:44.898Z",
    "votes": 10,
  },
  Object {
    "__v": 0,
    "_id": "5a2ff186fc13ae7095000621",
    "author": Object {
      "_id": "5a2ff186fc13ae7095000636",
      "avatar": "test-avatar-3.jpg",
      "name": "Killie Povey",
    },
    "body": "Mauris enim leo, rhoncus sed, vestibulum sit amet, cursus id, turpis. Integer aliquet, massa id promise.",
    "question_id": "5a2ff186fc13ae7095000649",
    "submitted_at": "2017-12-20T22:07:44.899Z",
    "updated_at": "2017-12-20T22:07:44.899Z",
    "votes": 0,
  },
  Object {
    "__v": 0,
    "_id": "5a2ff186fc13ae70950006a9",
    "author": Object {
      "_id": "5a2ff186fc13ae7095000638",
      "avatar": "test-avatar-2.jpg",
      "name": "Yoshi Gilchrist",
    },
    "body": "Praesent lectus. Vestibulum quam sapien, varius ut, blandit non, interdum in, ante.",
    "question_id": "5a2ff186fc13ae7095000649",
    "submitted_at": "2017-12-20T22:07:44.898Z",
    "updated_at": "2017-12-20T22:07:44.898Z",
    "votes": 43,
  },
  Object {
    "__v": 0,
    "_id": "5a2ff186fc13ae70950006a4",
    "author": Object {
      "_id": "5a2ff186fc13ae7095000636",
      "avatar": "test-avatar-3.jpg",
      "name": "Killie Povey",
    },
    "body": "Morbi odio odio, elementum eu, interdum eu, tincidunt in, leo.",
    "question_id": "5a2ff186fc13ae7095000649",
    "submitted_at": "2017-12-20T22:07:16.898Z",
    "updated_at": "2017-12-20T22:07:16.898Z",
    "votes": 1,
  },
  Object {
    "__v": 0,
    "_id": "5a2ff186fc13ae70950006a3",
    "author": Object {
      "_id": "5a2ff186fc13ae7095000636",
      "avatar": "test-avatar-3.jpg",
      "name": "Killie Povey",
    },
    "body": "Pellentesque ultrices mattis odio. Donec vitae nisi.",
    "question_id": "5a2ff186fc13ae7095000649",
    "submitted_at": "2017-12-20T22:07:01.898Z",
    "updated_at": "2017-12-20T22:07:01.898Z",
    "votes": 103,
  },
  Object {
    "__v": 0,
    "_id": "5a2ff186fc13ae70950006a0",
    "author": Object {
      "_id": "5a2ff186fc13ae7095000636",
      "avatar": "test-avatar-3.jpg",
      "name": "Killie Povey",
    },
    "body": "Aliquam sit amet diam in magna bibendum imperdiet.",
    "question_id": "5a2ff186fc13ae7095000649",
    "submitted_at": "2017-12-20T22:05:44.898Z",
    "updated_at": "2017-12-20T22:05:44.898Z",
    "votes": 1,
  },
  Object {
    "__v": 0,
    "_id": "5a2ff186fc13ae70950006a2",
    "author": Object {
      "_id": "5a2ff186fc13ae7095000636",
      "avatar": "test-avatar-3.jpg",
      "name": "Killie Povey",
    },
    "body": "Nullam varius. Nulla facilisi.",
    "question_id": "5a2ff186fc13ae7095000649",
    "submitted_at": "2017-12-20T22:03:41.898Z",
    "updated_at": "2017-12-20T22:03:41.898Z",
    "votes": 26,
  },
  Object {
    "__v": 0,
    "_id": "5a2ff186fc13ae7095000619",
    "author": Object {
      "_id": "5a2ff186fc13ae7095000636",
      "avatar": "test-avatar-3.jpg",
      "name": "Killie Povey",
    },
    "body": "Nam congue, risus semper porta volutpat, quam pede lobortis",
    "question_id": "5a2ff186fc13ae7095000649",
    "submitted_at": "2017-12-20T22:01:07.898Z",
    "updated_at": "2017-12-20T22:01:07.898Z",
    "votes": 9,
  },
  Object {
    "__v": 0,
    "_id": "5a2ff186fc13ae7095000620",
    "author": Object {
      "_id": "5a2ff186fc13ae7095000636",
      "avatar": "test-avatar-3.jpg",
      "name": "Killie Povey",
    },
    "body": "Pellentesque at nulla. Suspendisse potenti. Cras in purus eu magna",
    "question_id": "5a2ff186fc13ae7095000649",
    "submitted_at": "2017-12-19T23:04:24.894Z",
    "updated_at": "2017-12-19T23:04:24.894Z",
    "votes": 44,
  },
]
`;

exports[`GET /api/answers/:id should sort answers by votes 1`] = `
Array [
  Object {
    "__v": 0,
    "_id": "5a2ff186fc13ae70950006a3",
    "author": Object {
      "_id": "5a2ff186fc13ae7095000636",
      "avatar": "test-avatar-3.jpg",
      "name": "Killie Povey",
    },
    "body": "Pellentesque ultrices mattis odio. Donec vitae nisi.",
    "question_id": "5a2ff186fc13ae7095000649",
    "submitted_at": "2017-12-20T22:07:01.898Z",
    "updated_at": "2017-12-20T22:07:01.898Z",
    "votes": 103,
  },
  Object {
    "__v": 0,
    "_id": "5a2ff186fc13ae7095000620",
    "author": Object {
      "_id": "5a2ff186fc13ae7095000636",
      "avatar": "test-avatar-3.jpg",
      "name": "Killie Povey",
    },
    "body": "Pellentesque at nulla. Suspendisse potenti. Cras in purus eu magna",
    "question_id": "5a2ff186fc13ae7095000649",
    "submitted_at": "2017-12-19T23:04:24.894Z",
    "updated_at": "2017-12-19T23:04:24.894Z",
    "votes": 44,
  },
  Object {
    "__v": 0,
    "_id": "5a2ff186fc13ae70950006a9",
    "author": Object {
      "_id": "5a2ff186fc13ae7095000638",
      "avatar": "test-avatar-2.jpg",
      "name": "Yoshi Gilchrist",
    },
    "body": "Praesent lectus. Vestibulum quam sapien, varius ut, blandit non, interdum in, ante.",
    "question_id": "5a2ff186fc13ae7095000649",
    "submitted_at": "2017-12-20T22:07:44.898Z",
    "updated_at": "2017-12-20T22:07:44.898Z",
    "votes": 43,
  },
  Object {
    "__v": 0,
    "_id": "5a2ff186fc13ae70950006a2",
    "author": Object {
      "_id": "5a2ff186fc13ae7095000636",
      "avatar": "test-avatar-3.jpg",
      "name": "Killie Povey",
    },
    "body": "Nullam varius. Nulla facilisi.",
    "question_id": "5a2ff186fc13ae7095000649",
    "submitted_at": "2017-12-20T22:03:41.898Z",
    "updated_at": "2017-12-20T22:03:41.898Z",
    "votes": 26,
  },
  Object {
    "__v": 0,
    "_id": "5a2ff186fc13ae70950006a1",
    "author": Object {
      "_id": "5a2ff186fc13ae7095000636",
      "avatar": "test-avatar-3.jpg",
      "name": "Killie Povey",
    },
    "body": "Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Duis faucibus",
    "question_id": "5a2ff186fc13ae7095000649",
    "submitted_at": "2017-12-20T22:09:44.898Z",
    "updated_at": "2017-12-20T22:09:44.898Z",
    "votes": 10,
  },
  Object {
    "__v": 0,
    "_id": "5a2ff186fc13ae7095000619",
    "author": Object {
      "_id": "5a2ff186fc13ae7095000636",
      "avatar": "test-avatar-3.jpg",
      "name": "Killie Povey",
    },
    "body": "Nam congue, risus semper porta volutpat, quam pede lobortis",
    "question_id": "5a2ff186fc13ae7095000649",
    "submitted_at": "2017-12-20T22:01:07.898Z",
    "updated_at": "2017-12-20T22:01:07.898Z",
    "votes": 9,
  },
  Object {
    "__v": 0,
    "_id": "5a2ff186fc13ae70950006a0",
    "author": Object {
      "_id": "5a2ff186fc13ae7095000636",
      "avatar": "test-avatar-3.jpg",
      "name": "Killie Povey",
    },
    "body": "Aliquam sit amet diam in magna bibendum imperdiet.",
    "question_id": "5a2ff186fc13ae7095000649",
    "submitted_at": "2017-12-20T22:05:44.898Z",
    "updated_at": "2017-12-20T22:05:44.898Z",
    "votes": 1,
  },
  Object {
    "__v": 0,
    "_id": "5a2ff186fc13ae70950006a4",
    "author": Object {
      "_id": "5a2ff186fc13ae7095000636",
      "avatar": "test-avatar-3.jpg",
      "name": "Killie Povey",
    },
    "body": "Morbi odio odio, elementum eu, interdum eu, tincidunt in, leo.",
    "question_id": "5a2ff186fc13ae7095000649",
    "submitted_at": "2017-12-20T22:07:16.898Z",
    "updated_at": "2017-12-20T22:07:16.898Z",
    "votes": 1,
  },
  Object {
    "__v": 0,
    "_id": "5a2ff186fc13ae7095000618",
    "author": Object {
      "_id": "5a2ff186fc13ae7095000636",
      "avatar": "test-avatar-3.jpg",
      "name": "Killie Povey",
    },
    "body": "Vestibulum ante ipsum primis in faucibus",
    "question_id": "5a2ff186fc13ae7095000649",
    "submitted_at": "2017-12-20T22:55:44.898Z",
    "updated_at": "2017-12-20T22:55:44.898Z",
    "votes": 0,
  },
  Object {
    "__v": 0,
    "_id": "5a2ff186fc13ae7095000621",
    "author": Object {
      "_id": "5a2ff186fc13ae7095000636",
      "avatar": "test-avatar-3.jpg",
      "name": "Killie Povey",
    },
    "body": "Mauris enim leo, rhoncus sed, vestibulum sit amet, cursus id, turpis. Integer aliquet, massa id promise.",
    "question_id": "5a2ff186fc13ae7095000649",
    "submitted_at": "2017-12-20T22:07:44.899Z",
    "updated_at": "2017-12-20T22:07:44.899Z",
    "votes": 0,
  },
]
`;

exports[`GET /api/answers/:id should sort answers by votes in ascending order 1`] = `
Array [
  Object {
    "__v": 0,
    "_id": "5a2ff186fc13ae7095000618",
    "author": Object {
      "_id": "5a2ff186fc13ae7095000636",
      "avatar": "test-avatar-3.jpg",
      "name": "Killie Povey",
    },
    "body": "Vestibulum ante ipsum primis in faucibus",
    "question_id": "5a2ff186fc13ae7095000649",
    "submitted_at": "2017-12-20T22:55:44.898Z",
    "updated_at": "2017-12-20T22:55:44.898Z",
    "votes": 0,
  },
  Object {
    "__v": 0,
    "_id": "5a2ff186fc13ae7095000621",
    "author": Object {
      "_id": "5a2ff186fc13ae7095000636",
      "avatar": "test-avatar-3.jpg",
      "name": "Killie Povey",
    },
    "body": "Mauris enim leo, rhoncus sed, vestibulum sit amet, cursus id, turpis. Integer aliquet, massa id promise.",
    "question_id": "5a2ff186fc13ae7095000649",
    "submitted_at": "2017-12-20T22:07:44.899Z",
    "updated_at": "2017-12-20T22:07:44.899Z",
    "votes": 0,
  },
  Object {
    "__v": 0,
    "_id": "5a2ff186fc13ae70950006a0",
    "author": Object {
      "_id": "5a2ff186fc13ae7095000636",
      "avatar": "test-avatar-3.jpg",
      "name": "Killie Povey",
    },
    "body": "Aliquam sit amet diam in magna bibendum imperdiet.",
    "question_id": "5a2ff186fc13ae7095000649",
    "submitted_at": "2017-12-20T22:05:44.898Z",
    "updated_at": "2017-12-20T22:05:44.898Z",
    "votes": 1,
  },
  Object {
    "__v": 0,
    "_id": "5a2ff186fc13ae70950006a4",
    "author": Object {
      "_id": "5a2ff186fc13ae7095000636",
      "avatar": "test-avatar-3.jpg",
      "name": "Killie Povey",
    },
    "body": "Morbi odio odio, elementum eu, interdum eu, tincidunt in, leo.",
    "question_id": "5a2ff186fc13ae7095000649",
    "submitted_at": "2017-12-20T22:07:16.898Z",
    "updated_at": "2017-12-20T22:07:16.898Z",
    "votes": 1,
  },
  Object {
    "__v": 0,
    "_id": "5a2ff186fc13ae7095000619",
    "author": Object {
      "_id": "5a2ff186fc13ae7095000636",
      "avatar": "test-avatar-3.jpg",
      "name": "Killie Povey",
    },
    "body": "Nam congue, risus semper porta volutpat, quam pede lobortis",
    "question_id": "5a2ff186fc13ae7095000649",
    "submitted_at": "2017-12-20T22:01:07.898Z",
    "updated_at": "2017-12-20T22:01:07.898Z",
    "votes": 9,
  },
  Object {
    "__v": 0,
    "_id": "5a2ff186fc13ae70950006a1",
    "author": Object {
      "_id": "5a2ff186fc13ae7095000636",
      "avatar": "test-avatar-3.jpg",
      "name": "Killie Povey",
    },
    "body": "Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Duis faucibus",
    "question_id": "5a2ff186fc13ae7095000649",
    "submitted_at": "2017-12-20T22:09:44.898Z",
    "updated_at": "2017-12-20T22:09:44.898Z",
    "votes": 10,
  },
  Object {
    "__v": 0,
    "_id": "5a2ff186fc13ae70950006a2",
    "author": Object {
      "_id": "5a2ff186fc13ae7095000636",
      "avatar": "test-avatar-3.jpg",
      "name": "Killie Povey",
    },
    "body": "Nullam varius. Nulla facilisi.",
    "question_id": "5a2ff186fc13ae7095000649",
    "submitted_at": "2017-12-20T22:03:41.898Z",
    "updated_at": "2017-12-20T22:03:41.898Z",
    "votes": 26,
  },
  Object {
    "__v": 0,
    "_id": "5a2ff186fc13ae70950006a9",
    "author": Object {
      "_id": "5a2ff186fc13ae7095000638",
      "avatar": "test-avatar-2.jpg",
      "name": "Yoshi Gilchrist",
    },
    "body": "Praesent lectus. Vestibulum quam sapien, varius ut, blandit non, interdum in, ante.",
    "question_id": "5a2ff186fc13ae7095000649",
    "submitted_at": "2017-12-20T22:07:44.898Z",
    "updated_at": "2017-12-20T22:07:44.898Z",
    "votes": 43,
  },
  Object {
    "__v": 0,
    "_id": "5a2ff186fc13ae7095000620",
    "author": Object {
      "_id": "5a2ff186fc13ae7095000636",
      "avatar": "test-avatar-3.jpg",
      "name": "Killie Povey",
    },
    "body": "Pellentesque at nulla. Suspendisse potenti. Cras in purus eu magna",
    "question_id": "5a2ff186fc13ae7095000649",
    "submitted_at": "2017-12-19T23:04:24.894Z",
    "updated_at": "2017-12-19T23:04:24.894Z",
    "votes": 44,
  },
  Object {
    "__v": 0,
    "_id": "5a2ff186fc13ae70950006a3",
    "author": Object {
      "_id": "5a2ff186fc13ae7095000636",
      "avatar": "test-avatar-3.jpg",
      "name": "Killie Povey",
    },
    "body": "Pellentesque ultrices mattis odio. Donec vitae nisi.",
    "question_id": "5a2ff186fc13ae7095000649",
    "submitted_at": "2017-12-20T22:07:01.898Z",
    "updated_at": "2017-12-20T22:07:01.898Z",
    "votes": 103,
  },
]
`;
